# standard_workflow

./: README.md  noxfile.py  pyproject.toml
src/: __init__.py
src/standard_workflow/: console.py
tests/: test_console.py  test_wikipedia.py
