[tool.poetry]
name = "standard_workflow"
version = "0.1.0"
authors = ["Edward Huh <edward_huh@brown.edu>"]
description = "standardization of my workflow using the hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/edwardhuh/standard_workflow"
repository = "https://github.com/edwardhuh/standard_workflow"
keywords = ["standard"]

[tool.poetry.dependencies]
python = "^3.7"
# the caret means "up to the next major release"

click = "^7.1.2"
requests = "^2.24.0"
[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[tool.poetry.scripts]
standard_workflow = "standard_workflow.console:main"
# format: repo_name = "package_name.console:main"[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


# register the cli.py script
