[tool.poetry]
name = "standard_workflow"
version = "0.1.0"
description = ""
authors = ["Edward Huh <edward_huh@brown.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.24.0"

importlib-metadata = {version = "^0.23", python = "<=3.8"}

[tool.poetry.dev-dependencies]
pytest-mock = "^3.3.1"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
standard_workflow = "standard_workflow.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["standard_workflow"]

[tool.coverage.report]
show_missing = true
